# Yazit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  installer.nsi  make_icon.js
.claude/: settings.local.json
src/: App.cpp  App.h  EditorTab.cpp  EditorTab.h  FileDialogs.cpp  FileDialogs.h  FindState.cpp  FindState.h  LuaEngine.cpp  LuaEngine.h  main.cpp
src/ImGuiColorTextEdit/: LanguageDefinitions.cpp  TextEditor.cpp  TextEditor.h
